--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,15 @@
 repos:
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: v5.10.1
+repos:
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.1.5
   hooks:
-    - id: isort
-- repo: https://github.com/psf/black
-  rev: 23.1.0
-  hooks:
-    - id: black
-- repo:  https://github.com/PyCQA/flake8
-  rev: 6.0.0
-  hooks:
-    - id: flake8
+    # Run the linter.
+    - id: ruff
+    # Run the formatter.
+    - id: ruff-format
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.0.0
+  rev: v1.7.0
   hooks:
     - id: mypy
       additional_dependencies: []
