--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,8 +105,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-          cache-dependency-path: 'test_requirements.txt'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -119,11 +117,9 @@ jobs:
         run: |
           pip install -e .
       - name: Test with pytest
-        # XXX Disabled warnings check ( -W error) to be able to test on 3.11
-        # (pyparsing deprecation)
         run: |
           pip install -r test_requirements.txt
-          python -X dev -m pytest tests --ignore=tests/type_checking --cov --cov-report xml -v
+          python -X dev -m pytest tests --ignore=tests/type_checking --cov --cov-report xml -v -W error
       - name: Generate C++ coverage reports
         if: (github.event_name != 'schedule' && matrix.os != 'windows-latest')
         run: |
