--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,3 +93,28 @@ __version__ = "{version}"
 
 [tool.pytest.ini_options]
   minversion = "6.0"
+
+[tool.coverage]
+  [tool.coverage.run]
+    branch = true
+    source = ["atom"]
+
+  [tool.coverage.report]
+    # Regexes for lines to exclude from consideration
+    exclude_lines = [
+      # Have to re-enable the standard pragma
+      "pragma: no cover",
+
+      # Don't complain if tests don't hit defensive assertion code:
+      "raise NotImplementedError",
+      "pass",
+
+      # Don't complain about abstract methods, they aren't run:
+      "@(abc\\.)?abstractmethod",
+
+      # Don't complain about type checking
+      "if TYPE_CHECKING:",
+
+      # Don't complain about ellipsis in overload
+      "\\.\\.\\.",
+    ]
