fix type hints and related tests

--- a/tests/type_checking/test_dict.yml
+++ b/tests/type_checking/test_dict.yml
@@ -197,7 +197,7 @@
     reveal_type(A().m)  # N: Revealed type is "{{ member_value_type }}"
 
 
-- case: dict-with-default
+- case: dict_with_default
   parametrized:
   # Dict with typed key
   - member: Dict
