--- a/tests/type_checking/test_annotations.yml
+++ b/tests/type_checking/test_annotations.yml
@@ -5,7 +5,7 @@
 #
 # The full license is in the file LICENSE, distributed with this software.
 #------------------------------------------------------------------------------
-- case: annotated-member
+- case: annotated_member
   parametrized:
     - member: List
       annotation: List[int]
