--- a/tests/type_checking/test_coerced.yml
+++ b/tests/type_checking/test_coerced.yml
@@ -5,7 +5,7 @@
 #
 # The full license is in the file LICENSE, distributed with this software.
 #------------------------------------------------------------------------------
-- case: coerced-no-coercer
+- case: coerced_no_coercer
   parametrized:
     - member: Coerced
       member_instance: Coerced(int)
@@ -42,7 +42,7 @@
     reveal_type(A().m)  # N: Revealed type is "{{ member_value_type }}"
 
 
-- case: coerced-coercer
+- case: coerced_coercer
   parametrized:
     - member: Coerced
       member_instance: Coerced(io.StringIO, coercer=coercer)
