--- a/tests/type_checking/test_tuple.yml
+++ b/tests/type_checking/test_tuple.yml
@@ -106,24 +106,24 @@
   # Tuple with no defaults
   - member: FixedTuple
     member_instance: FixedTuple(int)
-    member_type: atom.tuple.FixedTuple[Tuple[builtins.int]]
+    member_type: atom.tuple.FixedTuple[tuple[builtins.int]]
     member_value_type: tuple[builtins.int]
   - member: FixedTuple
     member_instance: FixedTuple(int, float)
-    member_type: atom.tuple.FixedTuple[Tuple[builtins.int, builtins.float]]
+    member_type: atom.tuple.FixedTuple[tuple[builtins.int, builtins.float]]
     member_value_type: tuple[builtins.int, builtins.float]
   - member: FixedTuple
     member_instance: FixedTuple(int, float, str)
-    member_type: atom.tuple.FixedTuple[Tuple[builtins.int, builtins.float, builtins.str]]
+    member_type: atom.tuple.FixedTuple[tuple[builtins.int, builtins.float, builtins.str]]
     member_value_type: tuple[builtins.int, builtins.float, builtins.str]
   - member: FixedTuple, Int
     member_instance: FixedTuple(Int())
-    member_type: atom.tuple.FixedTuple[Tuple[builtins.int]]
+    member_type: atom.tuple.FixedTuple[tuple[builtins.int]]
     member_value_type: tuple[builtins.int]
   # Tuple with defaults
   - member: FixedTuple
     member_instance: FixedTuple(int, default=(3,))
-    member_type: atom.tuple.FixedTuple[Tuple[builtins.int]]
+    member_type: atom.tuple.FixedTuple[tuple[builtins.int]]
     member_value_type: tuple[builtins.int]
   main: |
     from atom.api import Atom, {{ member }}
