﻿allow to mark a member as read_only, constant, or coerced using the member class

--- a/tests/type_checking/test_annotations.yml
+++ b/tests/type_checking/test_annotations.yml
@@ -21,4 +21,4 @@
       m: {{ annotation }} = {{ member_instance }}
 
     reveal_type(A.m)  # N: Revealed type is "{{ member_type }}"
-    reveal_type(A().m)  # N: Revealed type is "{{ member_value_type }}"
+    reveal_type(A(m=[]).m)  # N: Revealed type is "{{ member_value_type }}"
