tests: fix typing tests

--- a/tests/type_checking/test_subclass.yml
+++ b/tests/type_checking/test_subclass.yml
@@ -1,11 +1,12 @@
 #------------------------------------------------------------------------------
-# Copyright (c) 2021, Nucleic Development Team.
+# Copyright (c) 2021-2024, Nucleic Development Team.
 #
 # Distributed under the terms of the Modified BSD License.
 #
 # The full license is in the file LICENSE, distributed with this software.
 #------------------------------------------------------------------------------
 - case: subclass
+  skip: sys.version_info < (3, 9)  # 3.8 uses Type[] while 3.9+ uses type[]
   parametrized:
     - member: Subclass
       member_instance: Subclass(A)
