--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,12 +63,14 @@ jobs:
           python -m pip install wheel cibuildwheel
       - name: Build wheels
         env:
+          CIBW_BEFORE_BUILD_WINDOWS: >-
+            pip install delvewheel
+          CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: >-
+            delvewheel repair -w {dest_dir} {wheel}
           CIBW_BUILD: cp${{ matrix.python }}-*
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: python -m pytest {package}/tests -v
           CIBW_ARCHS_MACOS: x86_64 universal2 arm64
-          # Disable FH4 to avoid linking against VC2014_1
-          ATOM_DISABLE_FH4: 1
         run: |
           python -m cibuildwheel . --output-dir dist
       - name: Store artifacts
