--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,10 +63,15 @@ jobs:
           python -m pip install wheel cibuildwheel
       - name: Build wheels
         env:
-          CIBW_BEFORE_BUILD_WINDOWS: >-
-            pip install delvewheel
-          CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: >-
-            delvewheel repair -w {dest_dir} {wheel}
+          # On Windows, we explicitly request MSVC compilers (as GitHub Action runners have
+          # MinGW on PATH that would be picked otherwise), switch to a static build for
+          # runtimes, but use dynamic linking for `VCRUNTIME140.dll`, `VCRUNTIME140_1.dll`,
+          # and the UCRT. This avoids requiring specific versions of `MSVCP140.dll`, while
+          # keeping shared state with the rest of the Python process/extensions.
+          CIBW_CONFIG_SETTINGS_WINDOWS: >-
+            setup-args="--vsenv"
+            setup-args="-Db_vscrt=mt"
+            setup-args="-Dcpp_link_args=['ucrt.lib','vcruntime.lib','/nodefaultlib:libucrt.lib','/nodefaultlib:libvcruntime.lib']"
           CIBW_BUILD: cp${{ matrix.python }}-*
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: python -m pytest {package}/tests -v
