drop support for 3.8 and 3.9

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
     if: needs.lint.result == 'success'
     strategy:
       matrix:
-        python-version: ['3.8', '3.9']
+        python-version: ['3.10']
     steps:
       - uses: actions/checkout@v4
       - name: Get history and tags for SCM versioning to work
@@ -94,12 +94,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13-dev']
-        exclude:
-          - python-version: '3.8'
-            os: macos-latest
-          - python-version: '3.9'
-            os: macos-latest
+        python-version: ['3.10', '3.11', '3.12', '3.13-dev']
     steps:
       - uses: actions/checkout@v4
       - name: Get history and tags for SCM versioning to work
