--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        python: [38, 39, 310, 311, 312, 313]
+        python: [310, 311, 312, 313]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
